--- a/languages/ja.yaml
+++ b/languages/ja.yaml
@@ -5,7 +5,7 @@ tw.gui.crashMessage.description:
 tw.loadingMessage:
   defaultMessage: Loading project …
   description: Default loading message
-  message: null
+  message: プロジェクトを読み込み中…
 tw.menuBar.60off:
   defaultMessage: Turn off 60 FPS mode
   description: Menu bar item for turning off 60 FPS mode
@@ -17,7 +17,7 @@ tw.menuBar.60on:
 tw.menuBar.changeUsername:
   defaultMessage: Change Username
   description: Menu bar item for changing the username
-  message: null
+  message: ユーザー名を変える
 tw.menuBar.cloudOff:
   defaultMessage: Disable Cloud Variables
   description: Menu bar item for disabling cloud variables
@@ -61,19 +61,19 @@ tw.menuBar.warpTimerOn:
 tw.menuBar.help:
   defaultMessage: Help
   description: Text for TurboWarp Help dropdown menu
-  message: null
+  message: ヘルプ
 tw.menuBar.code:
   defaultMessage: Source Code
   description: Text for source code link in the Help menu
-  message: null
+  message: ソースコード
 tw.menuBar.feedback:
   defaultMessage: Feedback & Bugs
   description: Text for feedback link in the Help menu
-  message: null
+  message: フィードバックやバグを報告する
 tw.menuBar.privacy:
   defaultMessage: Privacy
   description: Text for privacy policy link in the Help menu
-  message: null
+  message: プライバシー
 tw.menuBar.embed:
   defaultMessage: Embedding
   description: Text for embedding link in the Help menu
@@ -93,7 +93,7 @@ tw.unsavedChanges:
 tw.menuBar.seeInside:
   defaultMessage: See Inside
   description: Label for see inside button
-  message: null
+  message: 中を見る
 tw.home.instructions:
   defaultMessage: Instructions
   description: Header for instructions section of description
@@ -101,7 +101,7 @@ tw.home.instructions:
 tw.home.credit:
   defaultMessage: Notes and Credits
   description: Header for notes and credits section of description
-  message: null
+  message: メモとクレジット
 tw.viewFeaturedProjects:
   defaultMessage: Click to view featured projects.
   description: Text to view featured projects
@@ -121,7 +121,7 @@ tw.alerts.warning:
 tw.gui.defaultProjectTitle:
   defaultMessage: Project
   description: Default title for project
-  message: null
+  message: プロジェクト
 tw.home.description:
   defaultMessage: TurboWarp is a Scratch mod that compiles projects to JavaScript to make them run really fast. Try it out by inputting a project ID or URL above or choosing a featured project below.
   description: Description of TurboWarp
@@ -141,12 +141,12 @@ tw.footer.host.fosshost:
 tw.footer.source:
   defaultMessage: Source Code
   description: Link to footer to source code
-  message: null
+  message: ソースコード
 tw.footer.feedback:
   defaultMessage: Feedback & Bugs
   description: Link in footer to give feedback
-  message: null
+  message: フィードバックやバグを報告する
 tw.footer.privacy:
   defaultMessage: Privacy
   description: Link in footer to privacy policy
-  message: null
+  message: プライバシー
