--- a/languages/ja.yaml
+++ b/languages/ja.yaml
@@ -1,7 +1,7 @@
 tw.gui.crashMessage.description:
   defaultMessage: We are so sorry, but it looks like TurboWarp has crashed. Please refresh your page to try again.
   description: Message to inform the user that page has crashed.
-  message: null
+  message: すみません、TurboWrapはクラッシュしてしまったようです。もう一度ページを読み込みなおしてください。
 tw.loadingMessage:
   defaultMessage: Loading project …
   description: Default loading message
@@ -9,11 +9,11 @@ tw.loadingMessage:
 tw.menuBar.60off:
   defaultMessage: Turn off 60 FPS mode
   description: Menu bar item for turning off 60 FPS mode
-  message: null
+  message: 60FPSモードを解除する
 tw.menuBar.60on:
   defaultMessage: Turn on 60 FPS mode
   description: Menu bar item for turning on 60 FPS mode
-  message: null
+  message: 60FPSモードにする
 tw.menuBar.changeUsername:
   defaultMessage: Change Username
   description: Menu bar item for changing the username
@@ -21,19 +21,19 @@ tw.menuBar.changeUsername:
 tw.menuBar.cloudOff:
   defaultMessage: Disable Cloud Variables
   description: Menu bar item for disabling cloud variables
-  message: null
+  message: クラウド変数を無効にする
 tw.menuBar.cloudOn:
   defaultMessage: Enable Cloud Variables
   description: Menu bar item for enabling cloud variables
-  message: null
+  message: クラウド変数を有効にする
 tw.menuBar.cloudUnavailable:
   defaultMessage: Cloud Variables are not Available
   description: Menu bar item for when cloud variables are not available
-  message: null
+  message: クラウド変数は使うことができません
 tw.menuBar.advanced:
   defaultMessage: Advanced
   description: Text for advanced settings dropdown menu
-  message: null
+  message: 高度な設定
 tw.menuBar.hqpOff:
   defaultMessage: Turn off High Quality Pen
   description: Menu bar item for turning off high quality pen
@@ -45,11 +45,11 @@ tw.menuBar.hqpOn:
 tw.menuBar.compilerOff:
   defaultMessage: Disable Compiler
   description: Menu bar item for disabling the compiler
-  message: null
+  message: コンパイラを無効にする
 tw.menuBar.compilerOn:
   defaultMessage: Enable Compiler
   description: Menu bar item for enabling the compiler
-  message: null
+  message: コンパイラを有効にする
 tw.menuBar.warpTimerOff:
   defaultMessage: Turn off Warp Timer (Stuck Checking)
   description: Menu bar item for turning off Warp Timer
@@ -77,15 +77,15 @@ tw.menuBar.privacy:
 tw.menuBar.embed:
   defaultMessage: Embedding
   description: Text for embedding link in the Help menu
-  message: null
+  message: 埋め込み
 tw.menuBar.parameters:
   defaultMessage: URL Parameters
   description: Text for url parameters link in the Help menu
-  message: null
+  message: URLパラメーター
 tw.giveFeedback:
   defaultMessage: Give Feedback
   description: Text for the giving feedback button
-  message: null
+  message: フィードバックをする
 tw.unsavedChanges:
   defaultMessage: Unsaved Changes
   description: Title bar link indicating unsaved changes
@@ -105,11 +105,11 @@ tw.home.credit:
 tw.viewFeaturedProjects:
   defaultMessage: Click to view featured projects.
   description: Text to view featured projects
-  message: null
+  message: 注目のプロジェクトを見る
 tw.featuredProjectsStudio:
   defaultMessage: View studio on Scratch.
   description: Link to turbowarp featured projects studio
-  message: null
+  message: scratchのスタジオで見る
 tw.framerateIndicator:
   defaultMessage: "{framerate} FPS"
   description: Label indicating project framerate
