--- a/languages/ja.yaml
+++ b/languages/ja.yaml
@@ -9,15 +9,15 @@ tw.loadingMessage:
 tw.menuBar.60off:
   defaultMessage: Turn off 60 FPS mode
   description: Menu bar item for turning off 60 FPS mode
-  message: 60FPSモードを解除する
+  message: 60FPSモードを無効にする
 tw.menuBar.60on:
   defaultMessage: Turn on 60 FPS mode
   description: Menu bar item for turning on 60 FPS mode
-  message: 60FPSモードにする
+  message: 60FPSモードを有効にする
 tw.menuBar.changeUsername:
   defaultMessage: Change Username
   description: Menu bar item for changing the username
-  message: ユーザー名を変える
+  message: ユーザー名を設定する
 tw.menuBar.cloudOff:
   defaultMessage: Disable Cloud Variables
   description: Menu bar item for disabling cloud variables
@@ -69,7 +69,7 @@ tw.menuBar.code:
 tw.menuBar.feedback:
   defaultMessage: Feedback & Bugs
   description: Text for feedback link in the Help menu
-  message: フィードバックやバグを報告する
+  message: フィードバックやバグ
 tw.menuBar.privacy:
   defaultMessage: Privacy
   description: Text for privacy policy link in the Help menu
@@ -97,7 +97,7 @@ tw.menuBar.seeInside:
 tw.home.instructions:
   defaultMessage: Instructions
   description: Header for instructions section of description
-  message: 説明
+  message: 使い方
 tw.home.credit:
   defaultMessage: Notes and Credits
   description: Header for notes and credits section of description
@@ -105,11 +105,11 @@ tw.home.credit:
 tw.viewFeaturedProjects:
   defaultMessage: Click to view featured projects.
   description: Text to view featured projects
-  message: 注目のプロジェクトを見る
+  message: 注目のプロジェクトを見る。
 tw.featuredProjectsStudio:
   defaultMessage: View studio on Scratch.
   description: Link to turbowarp featured projects studio
-  message: scratchのスタジオで見る
+  message: scratchのスタジオで見る。
 tw.framerateIndicator:
   defaultMessage: "{framerate} FPS"
   description: Label indicating project framerate
@@ -117,7 +117,7 @@ tw.framerateIndicator:
 tw.alerts.warning:
   defaultMessage: Turn on Warp Timer or disable compiler (in Advanced menu) while creating projects to avoid potential data loss. Also note that scripts may need to be restarted for changes to apply.
   description: Message warning user of potential data loss.
-  message: プロジェクトの作成中にワープタイマーを有効にするか、コンパイラを無効にしてください。また、変更を適用するにはスクリプトの再起動が必要なことがあります。
+  message: プロジェクトの作成中に高度な設定の中のワープタイマーを有効にするか、コンパイラを無効にしてください。また、変更を適用するにはスクリプトの再起動が必要なことがあります。
 tw.gui.defaultProjectTitle:
   defaultMessage: Project
   description: Default title for project
@@ -125,7 +125,7 @@ tw.gui.defaultProjectTitle:
 tw.home.description:
   defaultMessage: TurboWarp is a Scratch mod that compiles projects to JavaScript to make them run really fast. Try it out by inputting a project ID or URL above or choosing a featured project below.
   description: Description of TurboWarp
-  message: TurboWrapは、scratchのプロジェクトをJavaScriptにコンパイルして速く動くように改造したものです。上の入力バーにプロジェクトIDやURLを入力するか、下のプロジェクトを選択してみてください。
+  message: TurboWrapは、scratchのプロジェクトをJavaScriptにコンパイルして速く動くように改造したものです。上の入力バーにプロジェクトIDやURLを入力するか、下のプロジェクトから選んでください。
 tw.footer.disclaimer:
   defaultMessage: Projects from the Scratch website are licensed under the Creative Commons Attribution-ShareAlike 2.0 license. TurboWarp is not affiliated with Scratch, the Scratch Team, or the Scratch Foundation.
   description: Disclaimer that TurboWarp is not connected to Scratch and licensing information
@@ -145,7 +145,7 @@ tw.footer.source:
 tw.footer.feedback:
   defaultMessage: Feedback & Bugs
   description: Link in footer to give feedback
-  message: フィードバックやバグを報告する
+  message: フィードバックやバグ
 tw.footer.privacy:
   defaultMessage: Privacy
   description: Link in footer to privacy policy
